--- a/konga/assets/js/app/plugins/openid-plugin.html
+++ b/konga/assets/js/app/plugins/openid-plugin.html
@@ -36,6 +36,18 @@
         <form name="PluginForm" novalidate class="form-horizontal">
           <div class="row">
             <div class="col-md-12">
+              <div class="form-group" ng-if="isPluginAdded">
+                <label class="col-sm-2 control-label">OXD Id</label>
+                <div class="col-sm-10">
+                  <input ng-model="pluginConfig.oxd_id" class="form-control"/>
+                </div>
+              </div>
+              <div class="form-group" ng-if="isPluginAdded">
+                <label class="col-sm-2 control-label">Client Id</label>
+                <div class="col-sm-10">
+                  <input ng-model="pluginConfig.client_id" class="form-control"/>
+                </div>
+              </div>
               <div class="form-group">
                 <label class="col-sm-2 control-label">OP Server</label>
                 <div class="col-sm-10">
@@ -334,7 +346,7 @@
           </div>
           <div class="row">
             <hr/>
-            <button type="submit" class="btn btn-primary" ng-click="addPlugin(PluginForm)">
+            <button type="submit" class="btn btn-primary" ng-click="managePlugin(PluginForm)">
               <i class="mdi mdi-check"></i> {{isPluginAdded ? "Update Plugin" : "Add Plugin" }}
             </button>
           </div>
